[package]
name = "hangmanrs"
version = "0.1.4"
edition = "2018"
author = "https://twitter.com/hsnmkls"
description = "Hangman in your terminal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.3"
